# shmelegram

./: .gitignore  .pylintrc  .travis.yml  LICENSE  Procfile  README.md  app.py  config.py  pyproject.toml  wsgi.py
.circleci/: config.yml
documentation/html_prototype/: chat-add-member.html  register-successful.html  register-user-exists.html  register-validation-successful.html
final_project/: __init__.py  config.py  models.py
final_project/migrations/versions/: 2784ddf4a8ea_initial_migration.py  81c5db2ed801_initial_migration.py  bca5d73c8775_update_chat_type_enumeration.py
final_project/templates/: base.html
shmelegram/: __init__.py  config.py  models.py  schema.py  service.py  template_filters.py  utils.py
shmelegram/migrations/versions/: 02923f056907_add_ondelete_clause.py  4494868ba558_add_reply_to_and_edited_at.py  62fa184e02fb_add_ondelete_clause_to_message.py  6fc2f69af661_add_a_many_to_many_in_seen_by.py  895625b4e503_set_up_hierarchy.py  c6a28ed8ded9_add_on_delete_clause.py  de500eedf7aa_add_last_online_and_message_views.py  e2ba0f83a66a_change_table_name.py
shmelegram/rest_api/: __init__.py  chat.py  message.py  user.py
shmelegram/static/css/: auth.css  base.css  chat.css  home.css
shmelegram/static/js/: chat.js  register.js  utils.js
shmelegram/static/js/chat/: api.js  dialog.js  display.js  main.js  message.js  state.js
shmelegram/static/js/utils/: date.js  main.js  storage.js
shmelegram/templates/: base.html  chat.html  flash_messages.html  nav.html
shmelegram/templates/auth/: login.html  register.html
shmelegram/templates/home/: about.html  index.html
shmelegram/utils/: __init__.py  redis_client.py
shmelegram/views/: auth.py  chat.py  home.py  message.py  messaging.py
tests/: conftest.py  test_api.py  test_db.py
