[tool.poetry]
name = "shmelegram"
version = "0.1.0"
description = "Final project for EPAM Python Autumn Program 2021"
authors = ["Andrey Shalaev <a.shalaev7125@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"
Flask = "^2.0.2"
SQLAlchemy = "^1.4.27"
python-dotenv = "^0.19.2"
Flask-SQLAlchemy = "^2.5.1"
mysql-connector-python = "^8.0.27"
Flask-Migrate = "^3.1.0"
Flask-RESTful = "^0.3.9"
marshmallow-sqlalchemy = "^0.26.1"
Flask-SocketIO = "^5.1.1"
gunicorn = "^20.1.0"
eventlet = "0.30.2"
redis = "^4.1.0"
parameterized = "^0.8.1"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
pylint-flask = "^0.6"
pylint-flask-sqlalchemy = "^0.2.0"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
